# refactor-tutor

./: .gitignore  IPT.cabal  Makefile  Makefile.mine  Makefile.r14533  Makefile.r15366  README.md  RegressionTests.hs  cabal.project  hie.yaml  rpt.cabal  stack.yaml
.docker/: Dockerfile  Dockerfile.builder  Dockerfile.runner  forward_env_start_httpd  httpd.conf  login  setup.sh
.github/workflows/: build.yml  docker.yml  wiki.yml
docs/: Home.md  _sidebar.md  bibliography.bib  containers.md  global-architecture.md  instructions-apache2.md  instructions-docker.md  release-management.md  rules-and-language-constructs.md  services.md  setup-development-environment.md  updating-the-wiki.md
exercises/.sigcse-demo/: start.java
exercises/.test/: start.java
exercises/.test.WithTesting/: tests.txt
exercises/.test2/: start.java
exercises/.testConditionals/: start.java
exercises/.testConditionals2/: start.java
exercises/.testReturnIf/: start.java
exercises/.testReturnVar/: start.java
exercises/1.even/: description.txt  start.java  tests.txt
exercises/2.sumValues/: description.txt  model1.java  start.java  tests.txt
exercises/3.oddSum/: description.txt  start.java
exercises/4.score/: description.txt  start.java  tests.txt
exercises/5.double/: description.txt  model.java  start.java  tests.txt
exercises/6.haveThree/: description.txt  start.java  tests.txt
exercises/sigcse-demo/: tests.txt
exercises/test.WithTesting/: description.txt  start.java
exercises/testConditionalsUseless/: start.java
exercises/testReturnIfElse/: start.java
scripts/: ref.txt
src/: Exp.hs  Main.hs  RPTServices.hs
src/Domain/: Dependency.hs  Domain.hs  Equality.hs  Evaluator.hs  FeedbackScript.hs  Javac.hs  Printer.hs  Syntax.hs  Terms.hs  TestPrograms.hs  Views.hs
src/FPTutor/: Diagnose.hs  Services.hs  Utils.hs
src/Test/: TestUtils.hs  Tests.hs
src/Utils/: Either.hs  ExerciseLoading.hs  ExerciseUtils.hs  FileUtils.hs  TestParser.hs  Utils.hs
src/Validation/: Validation.hs
test/: r1.even.exp  r1.even.json
test/java test files/: anotherTest.java  arrays.java  comments.java  comments.java-  functions.java  holes.java-  parserTest1.java  test1.java
test/json-rpc/: diagnose-correct.json  diagnose-expected.json  diagnose-noteq.json  diagnose-similar.json  diagnose-syntaxerr.json
test/p1endprograms/: P10-1-2018 10-13-46.java  P10-1-2018 11-46-02.java  P10-10-2018 12-14-11.java  P10-11-2018 11-05-34.java  P10-19-2018 20-07-21.java  P10-2-2018 10-25-51.java  P10-4-2018 11-14-04.java  P10-4-2018 14-52-11.java  P10-5-2018 11-10-46.java  P10-8-2018 22-55-26.java  P10-9-2018 10-53-52.java  P10-9-2018 11-40-54.java  P9-26-2018 16-22-08.java  P9-26-2018 16-30-20.java  P9-27-2018 14-34-30.java  P9-27-2018 14-40-22.java  P9-27-2018 15-22-26.java  P9-27-2018 8-35-31.java  P9-28-2018 13-08-22.java  P9-28-2018 14-58-36.java  P9-28-2018 15-15-00 - method.java  P9-28-2018 15-15-00.java  P9-30-2018 17-26-11.java
test/p1endprograms_incorrect/: P10-16-2018 13-53-46.java  P10-2-2018 9-44-36.java  P9-26-2018 16-06-35.java  P9-28-2018 11-31-18.java
test/p1intprograms/: P10-1-2018 10-13-46-2.java  P10-11-2018 11-05-34-1.java  P10-11-2018 11-05-34-2.java  P10-16-2018 13-53-46-2.java  P10-2-2018 10-25-51-2.java  P10-2-2018 9-44-36-1.java  P10-2-2018 9-44-36-2.java  P10-4-2018 11-14-04-3.java  P10-5-2018 11-10-46-1.java  P10-8-2018 22-55-26-1.java  P10-8-2018 22-55-26-2.java  P10-8-2018 22-55-26-3.java  P10-9-2018 10-53-52-2.java  P10-9-2018 11-40-54-1.java  P9-26-2018 16-22-08-1.java  P9-26-2018 16-22-08-2.java  P9-26-2018 16-30-20-1.java  P9-26-2018 16-30-20-2.java  P9-26-2018 16-30-20-3.java  P9-27-2018 14-34-30-1.java  P9-27-2018 14-34-30-2.java  P9-27-2018 14-34-30-3.java  P9-28-2018 13-08-22-2.java  P9-28-2018 14-58-36-2.java  P9-28-2018 14-58-36-3.java  P9-28-2018 15-15-00-1.java  P9-28-2018 15-15-00-2.java  P9-30-2018 17-26-11-1.java  P9-30-2018 17-26-11-2.java  P9-30-2018 17-26-11-3.java  P9-30-2018 17-26-11-4.java
test/p1intprograms_incorrect/: P10-1-2018 11-46-02-1.java  P10-2-2018 10-25-51-1.java  P10-4-2018 11-14-04-1.java  P10-4-2018 11-14-04-2.java  (+3 more)
www/: index.html  index.js  index.sh  ipt.js  login.html  package-lock.json  package.json  rpt.html  rpt.js
www/css/: style.css  (+3 more)
(+118 files in other folders)
