name:           IPT
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         p43341961

executable IPT
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   base >= 4
  ghc-options:     -Wall

library 
  build-depends:   
                   base >= 4,
                   parsec,
                   text,
                   ideas >=1.2.1,
                   QuickCheck,
                   wl-pprint,
                   mtl,
                   uniplate,
                   containers,
                   directory,
                   random,
                   array,
                   filepath >=1.3.0 && <=1.4.2.2,
                   ConfigFile >=1.1.1 && <1.2,
                   MissingH >=1.2.0, 
                   -- && < 1.3
                   language-java,
                   pretty,
                   process >=1.2.3.0,
                   bytestring >=0.10.6.0,
                   semigroups >= 0.18.1,
                   time >= 1.5.0.1,
                   split >= 0.2.3.1
  hs-source-dirs:  src
  ghc-options:     -Wall

        

test-suite IPTTests
  type:            exitcode-stdio-1.0
  main-is:         IPTTests.hs
  ghc-options:     -Wall -rtsopts
  build-depends:   
                   base >= 4, HTF > 0.9,
                   filepath >=1.3.0 && <=1.4.2.2
  other-modules:   
                  Domain.Evaluator,
                  Domain.Parsers.JavaParser,
                  Domain.Parsers.JavaParserTest,
                  Domain.Parsers.PHPParser,
                  Domain.Domain,
                  RPTServices,
                  Domain.Transformation.Transformation,
                  Domain.FeedbackScript
  hs-source-dirs:  
                  src/Test,
                  src

