cabal-version:  2.2
name:           rpt
version:        0.1
build-type:     Simple
author:         Hieke Keuning <h.w.keuning@uu.nl>

common deps
  build-depends:   base >= 4,
                   ideas,
                   containers,
                   uniplate,
                   time,
                   wl-pprint == 1.2.1,
                   array,
                   pretty,
                   parsec,
                   mtl,
                   filepath,
                   directory,
                   bytestring,
                   process,
                   split,
                   HTF,
                   HUnit,
                   QuickCheck
  ghc-options:     -Wall
                   -Wno-missing-home-modules
                   -- FIXME: These are temporary
                   -Wno-name-shadowing
                   -Wno-unused-imports
                   -Wno-unused-matches
                   -Wno-orphans
                   -Wno-unused-top-binds
                   -Wno-unused-local-binds
                   -Wno-unused-do-bind
  hs-source-dirs:  src

executable rpt
  import:          deps
  main-is:         Main.hs

test-suite tests
  import:          deps
  type:            exitcode-stdio-1.0
  main-is:         Tests.hs
  hs-source-dirs:  src/Test

